// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TransactionRow snapshot (dois temas): claro 1`] = `
<View
  accessibilityLabel="Mercado, Alimentação, Hoje, 14:32, menos 45 reais e 90 centavos"
  accessible={true}
>
  <View
    style={
      {
        "alignItems": "center",
        "flexDirection": "row",
        "gap": 12,
        "minHeight": 56,
        "paddingVertical": 8,
      }
    }
  >
    <View
      style={
        {
          "flex": 1,
        }
      }
    >
      <Text
        maxFontSizeMultiplier={1.3}
        style={
          [
            {
              "fontFamily": "Inter-Regular",
              "fontSize": 16,
              "lineHeight": 22,
            },
            {
              "color": "#111113",
            },
            {},
            null,
          ]
        }
      >
        Mercado
      </Text>
      <Text
        maxFontSizeMultiplier={1.3}
        style={
          [
            {
              "fontFamily": "Inter-Regular",
              "fontSize": 12,
              "lineHeight": 16,
            },
            {
              "color": "#5F5F6A",
            },
            {},
            null,
          ]
        }
      >
        Alimentação • Hoje, 14:32
      </Text>
    </View>
    <Text
      accessibilityLabel="menos 45 reais e 90 centavos"
      accessible={true}
      maxFontSizeMultiplier={1.3}
      style={
        [
          {
            "fontFamily": "Inter-Regular",
            "fontSize": 16,
            "lineHeight": 22,
          },
          {
            "color": "#111113",
          },
          {},
          {
            "fontVariant": [
              "tabular-nums",
            ],
          },
        ]
      }
    >
      −R$ 45,
      90
    </Text>
  </View>
</View>
`;

exports[`TransactionRow snapshot (dois temas): escuro 1`] = `
<View
  accessibilityLabel="Mercado, Alimentação, Hoje, 14:32, menos 45 reais e 90 centavos"
  accessible={true}
>
  <View
    style={
      {
        "alignItems": "center",
        "flexDirection": "row",
        "gap": 12,
        "minHeight": 56,
        "paddingVertical": 8,
      }
    }
  >
    <View
      style={
        {
          "flex": 1,
        }
      }
    >
      <Text
        maxFontSizeMultiplier={1.3}
        style={
          [
            {
              "fontFamily": "Inter-Regular",
              "fontSize": 16,
              "lineHeight": 22,
            },
            {
              "color": "#F2F2F3",
            },
            {},
            null,
          ]
        }
      >
        Mercado
      </Text>
      <Text
        maxFontSizeMultiplier={1.3}
        style={
          [
            {
              "fontFamily": "Inter-Regular",
              "fontSize": 12,
              "lineHeight": 16,
            },
            {
              "color": "#9B9BA6",
            },
            {},
            null,
          ]
        }
      >
        Alimentação • Hoje, 14:32
      </Text>
    </View>
    <Text
      accessibilityLabel="menos 45 reais e 90 centavos"
      accessible={true}
      maxFontSizeMultiplier={1.3}
      style={
        [
          {
            "fontFamily": "Inter-Regular",
            "fontSize": 16,
            "lineHeight": 22,
          },
          {
            "color": "#F2F2F3",
          },
          {},
          {
            "fontVariant": [
              "tabular-nums",
            ],
          },
        ]
      }
    >
      −R$ 45,
      90
    </Text>
  </View>
</View>
`;
